supporting to run tomee with another JVM than the maven one